# Mesh

./: CMakeLists.txt
cpp/io/: CMakeLists.txt
cpp/math/: CMakeLists.txt
cpp/mesh/: .CMakeLists.txt.swp  .mesh.cc.swp  .meshing.cc.swp  CMakeLists.txt  elements.cc  mesh.cc  meshing.cc  segment.cc  system.cc
cpp/mesh/include/: attribute.h  elements.h  hash.hh  segment.h  simplexcontainer.hh  system.h
cpp/triangle/: .CMakeLists.txt.swp  .triangle.c.swp
cpp/triangle/include/: .triangle.h.swp
py/mesh/: .CMakeLists.txt.swp  CMakeLists.txt  pymesh.cc
